refactor(backend): Sorting and cleaning all modules in backend according to CleanCodeCriteria